[Refacot] 농수산품 최종 수정 - # 14